--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "fynejs",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "A tiny, fast, zero-dependency reactive UI framework for the browser",
   "main": "dist/x-tool.min.js",
-  "types": "dist/types.d.ts",
+  "types": "types.d.ts",
   "files": [
     "dist/x-tool.min.js",
-    "dist/types.d.ts",
+    "types.d.ts",
     "README.md"
   ],
   "scripts": {
